<resources>
    <string name="app_name">SchedulerApp</string>
    <string name="app_name_text">App Scheduler</string>
    <string name="start_text">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_list_top_header_text">Choose an app for scheduling</string>
    <string name="welcome_to_scheduler_app">Welcome to scheduler app</string>
    <string name="show_install_app_list">Show installed apps</string>
    <string name="show_launch_fail_app_list">Show launch failed apps</string>
    <string name="time_is">Selected time is:</string>
    <string name="select_time">Select Time</string>
    <string name="pick_time_is">Pick time is:</string>
    <string name="setup">Setup</string>
    <string name="cancel_the_schedule_to_launch_the_app">Cancel the schedule to launch the app</string>
    <string name="set_the_schedule_to_launch_the_app">Set the schedule to launch the app</string>
    <string name="update_to_app_lunch_schedule">Switch need to turn off to cancel the schedule</string>
</resources>