<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_scheduler_app"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/show_install_app"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="50dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/show_install_app_list"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/show_launch_fail_app_list"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/show_launch_fail_app_list"
        android:textSize="20sp"
        android:textStyle="bold"
         android:visibility="gone"/>


</LinearLayout>