<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.main.MainActivity">

    <!-- Top Circular Image -->
    <ImageView
        android:id="@+id/topImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="AppName"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold" />

    <!-- Title above TimePicker -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="start"
        android:text="@string/select_time"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- TimePicker -->
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/gray_200"
        android:padding="16dp"
        android:theme="@style/CustomTimePickerTheme"
        android:timePickerMode="spinner" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:paddingTop="10dp"
        android:text="@string/time_is"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Spacer to push button to bottom -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Bottom Button-like TextView -->
    <TextView
        android:id="@+id/setupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/setup"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>
